# obs-flip-sum-filter

./: .gitignore  CMakeLists.txt  README.md
src/: flip-sum-filter.c  obs-flip-sum-filter.c
